--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
       <!-- Contact Section -->
       <div
-        style="height: 100vh"
+        style="height: 100vh; background-color: lightskyblue"
         id="contact"
         class="d-flex flex-column justify-content-center"
       >
