--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       /* Contact Section */
       #contact {
-        background-color: white;
+        background-color: rgb(147, 147, 147);
       }
 
       @media (min-width: 768px) {
@@ -262,7 +262,7 @@
 
       <!-- Contact Section -->
       <div
-        style="height: 100vh; background-color: lightskyblue"
+        style="height: 100vh"
         id="contact"
         class="d-flex flex-column justify-content-center"
       >
