--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <a href="" target="_blank">
               <i class="fab fa-linkedin"></i>
             </a>
-            <a href="" target="_blank">
+            <a href="https://www.instagram.com/_agardigi?igsh=NTY0djVzbGMwbXV1" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
             <a href="mailto:" target="_blank">
